# vissm

./: .gitignore  README.md  config.py  main.py  plots.py  pyproject.toml  run.py  test.py  utils.py
dataset/: __init__.py  bimodal.py  canonical.py  random_walk.py  sinusoid.py
models/: __init__.py  distributions.py  gmvae.py  models.py  ssm.py  tr.py  transition.py  utils.py  vae.py
models/ssm/: __init__.py  gauss.py  mixture.py  transition.py  vae.py
models/vae/: vae.py
plots/: __init__.py  heatmap.py  regression.py  sinusoid.py
