[project]
name = "vissm"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "distrax>=0.1.5",
    "equinox>=0.12.2",
    "jax>=0.6.2 ; sys_platform != 'linux'",
    "jax-dataloader>=0.1.3",
    "jax[cuda12]>=0.6.2 ; sys_platform == 'linux'",
    "jaxtyping>=0.3.2",
    "optax>=0.2.5",
]

[dependency-groups]
plot = [
    "matplotlib>=3.10.3",
]
utils = [
    "tqdm>=4.67.1",
    "tyro>=0.9.26",
    "wandb>=0.20.1",
]

[tool.uv]
default-groups = ["plot", "utils"]
